User, Roles and User Roles Changes
Signed-off-by: Chinthaka Manathunga <Chinthaka.Manathunga@lseg.com>

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,17 +1,19 @@
 <!--Header files-->
-<div th:insert="~{fragments/header}"></div>
+<div th:insert="~{header}"></div>
 
 <body>
 <!--Sidebar container-->
-<div th:insert="~{fragments/side-bar}"></div>
+<div th:insert="~{side-bar}"></div>
 
 <div class="pusher">
-    <div th:insert="~{fragments/nav-bar}"></div>
+    <div th:insert="~{nav-bar}"></div>
 
     <!--Page Content-->
+    <div><img class="ui fluid image" style="width:100%; height: 85%" th:src="@{/assets/images/bg.jpg}"></div>
+
     <!--End of Page Content-->
 
-    <div th:insert="~{fragments/footer}"></div>
+    <div th:insert="~{footer}"></div>
 
 </div>
 </body>
