--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -9,7 +9,7 @@
 
     <title th:text="${title}"></title>
     <link href="webjars/fomantic-ui/dist/semantic.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" th:href="@{../../static/site.css}">
+    <link rel="stylesheet" th:href="@{/site.css}">
 
     <style type="text/css">
 
